impc_prod_tracker/kube/wp/keycloak/api-service/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-test
  namespace: mi-production-tracker-keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: api-service-test
          image: quay.io/keycloak/keycloak:25.0.0  # Using GitLab CI/CD variable for image version
          ports:
            - containerPort: 8080
          command:
            - "start-dev"
