impc_prod_tracker/kube/wp/keycloak/api-service/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-api
  namespace: mi-production-tracker-keycloak
  labels:
    app: keycloak
spec:
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
