impc_prod_tracker/kube/wp/keycloak/api-service/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-tracker-api-ingress
  namespace: mi-production-tracker-keycloak
  annotations:


    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /keycloak/$2
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # adds 301 redirect with trailing slash
    # see: https://github.com/kubernetes/ingress-nginx/issues/646
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/keycloak)$ $1/ permanent;
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
    - host: www.gentar.org
      http:
        paths:
          - path: /keycloak(/|$)(.*)
            backend:
              serviceName: api-service-keycloak
              servicePort: 9090
  tls:
    - hosts:
        - gentar.org
        - www.gentar.org
      secretName: gentar-tls
